--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,8 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+<h3>2024</h3>
+<ul>
+<li><strong>Coming soon...</strong>.</li>
+</ul>
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
-
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
