--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,27 +10,31 @@ author_profile: true
 {% endif %}
 
 {% include base_path %}
+<p align = "justify"> 
+<h2>Journal articles</h2>
+<ol reversed>
+<li><strong>Wu, S.</strong>, Huang, Q. & Zhao, L. Physics-informed deep learning-based inversion for airborne electromagnetic data. Geophysical Journal International, 238, 1774-1789. [<a href="https://doi.org/10.1093/gji/ggae244" target="_blank" rel="noopener noreferrer">Link</a>]</li>
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
+<li><strong>Wu, S.</strong>, Huang, Q. & Zhao, L., 2023. Fast Bayesian inversion of airborne electromagnetic data based on the invertible neural network. IEEE Transactions on Geoscience and Remote Sensing, 61, 5907211. [<a href="https://doi.org/10.1109/TGRS.2023.3264777" target="_blank" rel="noopener noreferrer">Link</a>]</li>
 
+<li><strong>Wu, S.</strong>, Huang, Q. & Zhao, L., 2023. A deep learning-based network for the simulation of airborne electromagnetic responses. Geophysical Journal International, 233, 253-263. [<a href="https://doi.org/10.1093/gji/ggac463" target="_blank" rel="noopener noreferrer">Link</a>]</li>
 
+<li><strong>Wu, S.</strong>, Huang, Q. & Zhao, L., 2022. Instantaneous inversion of airborne electromagnetic data based on deep learning. Geophysical Research Letters, 49(10), e2021GL097165. [<a href="https://doi.org/10.1029/2021GL097165" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li><strong>Wu, S.</strong>, Huang, Q. & Zhao, L., 2021. Convolutional neural network inversion of airborne electromagnetic data. Geophysical Prospecting, 69(8-9), 1761-1772. [<a href="https://doi.org/10.1111/1365-2478.13136" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li><strong>Wu, S.</strong>, Huang, Q. & Zhao, L., 2021. De-noising of transient electromagnetic data based on the long short-term memory-autoencoder. Geophysical Journal International, 224(1), 669-681. [<a href="https://doi.org/10.1093/gji/ggaa424" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li>Xue, J., Huang, Q., <strong>Wu, S.</strong>, Zhao, L. & Ma, B., 2024. Real-time dual-parameter full-waveform inversion of GPR data based on robust deep learning. Geophysical Journal International, 238, 1755-1771. [<a href="https://doi.org/10.1093/gji/ggae243" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li>Xue, J., Huang, Q., <strong>Wu, S.</strong> & Zhao, L., 2024. Detection of ULF geomagnetic anomalies prior to the Tohoku-Oki Earthquake by the multi-reference station method. IEEE Transactions on Geoscience and Remote Sensing, 62, 5910009. [<a href="https://doi.org/10.1109/TGRS.2024.3382472" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li>Xue, J., <strong>Wu, S.</strong>, Huang, Q., Zhao, L., Sarlis, N. V. & Varotsos, P. A., 2023. RASE: A real-time automatic search engine for anomalous seismic electric signals in geoelectric data. IEEE Transactions on Geoscience and Remote Sensing, 61, 5905911. [<a href="https://doi.org/10.1109/TGRS.2023.3260202" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li>Xue, J., Huang, Q., <strong>Wu, S.</strong> & Nagao, T., 2022. LSTM-autoencoder network for the detection of seismic electric signals. IEEE Transactions on Geoscience and Remote Sensing, 60, 5917012. [<a href="https://doi.org/10.1109/TGRS.2022.3183389" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li>Wang, K., Huang, Q. & <strong>Wu, S.</strong>, 2020. Application of long short-term memory neural network in geoelectric field data processing. Chinese Journal of Geophysics (in Chinese), 63(8), 3015-3024. [<a href="https://doi.org/10.6038/cjg2020O0119" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+</ol>
+</p>
 
