--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -10,9 +10,7 @@ author_profile: true
 
 <h2>&#127775; DL-based AEM data analysis system</h2>
 <p, align = "justify">
-During my PhD and first postdoctoral program, I focused on developing a comprehensive analysis system for airborne electromagnetic data (AEM) based on deep learning (DL)
-  techniques. The system consists of key processes, including denoising, simulation, resistivity imaging and uncertainty analysis. 
-  The overall goal is investigating underground structures with higher depth resolution and efficiency.
+Hepatocellular carcinoma (HCC) remains a serious health challenge worldwide. One of the major problems in the treatment of liver cancer is that it is prone to frequent recurrence after curative resection. My current focus is on multi-omics analysis of primary and recurrent tumors to explore key factors in the recurrence and metastasis mechanisms of liver cancer.
 </p>
 
 <div style="display: flex; align-items: flex-start; margin-bottom: 30px; background-color: white; border: 1px solid white; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
@@ -20,12 +18,10 @@ During my PhD and first postdoctoral program, I focused on developing a comprehe
     <img src="/images/TEM-denoising.png" alt="Project 1" style="width: 75%; height: auto; display: block; border-radius: 5px;">
   </div>
   <div style="flex: 2;">
-    <h2 style="margin-top: 0;">&#9658; Denoising</h2>
-    <p, align = "justify; margin-bottom: 5px;">The late-time time-domain EM (TEM) responses are often dominated by complex noises, including environmental noise, systematic erros, industrial power disturbance,
-       and sferics. We developed a long short-term memory (LSTM) network with the autoencoder structure to improve the quality of TEM signals
-      at later times, thus enabling us to better resolve deeper structures.</p>
+    <h2 style="margin-top: 0;">Multi-omics</h2>
+    <p, align = "justify; margin-bottom: 5px;">this current study can be a valuable resource yielding important insights into the evolutionary dynamics of metastatic progression in HCC and providing a rational foundation for developing predictive biomarkers and therapeutic targets for late-stage HCC patients.</p>
     <p style="text-align: right; margin-top: 0px;margin-bottom: 0px;">
-      <a href="https://doi.org/10.1093/gji/ggaa424" target="_blank" style="text-decoration: underline; color: #555555; font-size: 16px;">Wu et al., 2021a</a>
+      <a href="https://doi.org/10.1016/j.ccell.2023.11.010" target="_blank" style="text-decoration: underline; color: #555555; font-size: 16px;">Sun et al., 2021a</a>
     </p>
   </div>
 </div>
