--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -16,6 +16,11 @@ author_profile: true
 
 <li>Zhou J, Chen Y, Qu J H, <strong>Wang Y K,</strong> Mai W N, Wan D J, Lu X Y. Responses of microbial community and antibiotic resistance genes to co-existence of chloramphenicol and salinity[J]. Applied Microbiology and Biotechnology, 2022. [<a href="https://doi.org/10.1007/s00253-022-12188-3" target="_blank" rel="noopener noreferrer">Link</a>]</li>
 
+<li>Zhou J, Chen Y, Qu J H, <strong></strong>Wang Y K, </strong>Li P L, Xu W L, Huang Y J, Mai W N. Isolation of the salt-tolerant bacterium Halomonas sp. A20 and its degradation of saccharin sodium wastewater[J]. Microbiology China, 2022. [<a href="http://dx.doi.org/10.13344/j.microbiol.china.210521" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+
+<li>Patent: A biological contact oxidation device for wastewater treatment(Patent Substantive
+Examination Stage, Disclosure No. : CN112979091A. </li>
+
 </ol>
 </p>
 
