--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -15,7 +15,7 @@ Hepatocellular carcinoma (HCC) remains a serious health challenge worldwide. One
 
 <div style="display: flex; align-items: flex-start; margin-bottom: 30px; background-color: white; border: 1px solid white; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
   <div style="flex: 1; margin-right: 20px;">
-    <img src="/images/TEM-denoising.png" alt="Project 1" style="width: 75%; height: auto; display: block; border-radius: 5px;">
+    <img src="/images/CC.png" alt="Project 1" style="width: 75%; height: auto; display: block; border-radius: 5px;">
   </div>
   <div style="flex: 2;">
     <h2 style="margin-top: 0;">Multi-omics</h2>
