--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -8,7 +8,7 @@ author_profile: true
 {% include base_path %}
 
 
-<h2>&#127775; DL-based AEM data analysis system</h2>
+<h2>Integrated multi-omics profiling</h2>
 <p, align = "justify">
 Hepatocellular carcinoma (HCC) remains a serious health challenge worldwide. One of the major problems in the treatment of liver cancer is that it is prone to frequent recurrence after curative resection. My current focus is on multi-omics analysis of primary and recurrent tumors to explore key factors in the recurrence and metastasis mechanisms of liver cancer.
 </p>
