--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -21,7 +21,7 @@ Hepatocellular carcinoma (HCC) remains a serious health challenge worldwide. One
     <h2 style="margin-top: 0;">Multi-omics</h2>
     <p, align = "justify; margin-bottom: 5px;">this current study can be a valuable resource yielding important insights into the evolutionary dynamics of metastatic progression in HCC and providing a rational foundation for developing predictive biomarkers and therapeutic targets for late-stage HCC patients.</p>
     <p style="text-align: right; margin-top: 0px;margin-bottom: 0px;">
-      <a href="https://doi.org/10.1016/j.ccell.2023.11.010" target="_blank" style="text-decoration: underline; color: #555555; font-size: 16px;">Sun et al., 2021a</a>
+      <a href="https://doi.org/10.1016/j.ccell.2023.11.010" target="_blank" style="text-decoration: underline; color: #555555; font-size: 16px;">Sun et al.</a>
     </p>
   </div>
 </div>
