--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,6 +14,8 @@ author_profile: true
 <h2>Journal articles</h2>
 <ol reversed>
 
+<li> Song M, Ma S, Wang G, <strong>Wang Y,</strong> Yang Z, Xie B, Guo T, Huang X, Zhang L. Benchmarking copy number aberrations inference tools using single-cell multi-omics datasets. Brief Bioinform. 2025. [<a href="https://doi.org/10.1093/bib/bbaf076" target="_blank" rel="noopener noreferrer">Link</a>]</li>
+  
 <li>Zhou J, Chen Y, Qu J H, <strong>Wang Y K,</strong> Mai W N, Wan D J, Lu X Y. Responses of microbial community and antibiotic resistance genes to co-existence of chloramphenicol and salinity[J]. Applied Microbiology and Biotechnology, 2022. [<a href="https://doi.org/10.1007/s00253-022-12188-3" target="_blank" rel="noopener noreferrer">Link</a>]</li>
 
 <li>Zhou J, Chen Y, Qu J H, <strong></strong>Wang Y K, </strong>Li P L, Xu W L, Huang Y J, Mai W N. Isolation of the salt-tolerant bacterium Halomonas sp. A20 and its degradation of saccharin sodium wastewater[J]. Microbiology China, 2022. [<a href="http://dx.doi.org/10.13344/j.microbiol.china.210521" target="_blank" rel="noopener noreferrer">Link</a>]</li>
